@@ -2,10 +2,10 @@ Changes
 MANIFEST
 Makefile.PL
 README
+examples/old-test.pl
 examples/psh.pl
 lib/Term/Shell.pm
 lib/Term/Shell.pod
-test.pl
 t/01require.t
 t/02default.t
 t/03catchsmry.t
